# embed-esp-sensor

./: .gitmodules  .project_name  CMakeLists.txt  README.md  build.sh
esp-project/: MPU9250.h  MPU9250Helper.h  esp-project.ino
src/: esp-project.cpp
