CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(esp-project CXX)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/esp/sdk/avr/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/esp/std/cores/arduino)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/esp/std/variants/standard)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME})

FILE(GLOB_RECURSE sources ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/*.cpp)
FILE(GLOB_RECURSE headers ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}/*.hpp)

add_custom_target(
    ${PROJECT_NAME}
  COMMAND
    ${CMAKE_CURRENT_SOURCE_DIR}/build.sh
  WORKING_DIRECTORY
    ${CMAKE_CURRENT_SOURCE_DIR}
  SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/${PROJECT_NAME}.cpp ${sources} ${headers}
)

add_library(fake-${PROJECT_NAME}-to-collect-includes
    ${CMAKE_CURRENT_SOURCE_DIR}/src/${PROJECT_NAME}.cpp ${sources} ${headers}
)
